you can now filter by channel without opening channel tab

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -761,7 +761,7 @@ nav div {
     }
 
 .channelEntryPaneLocked {
-    border: 1px solid var(--mainColor);
+    outline: 1px solid var(--mainColor);
 }
 
 .channelEntryPaneList {
