--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -52,7 +52,7 @@
         display: flex;
         flex-direction: column;
         background: var(--nav_bg);
-        border: 1px solid var(--video_bd_bot);
+        outline: 1px solid var(--font_text);
         box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
     }
 
@@ -67,30 +67,35 @@
 
         #confirmationMenu div div {
             padding: 0;
-            width: 100%;
+            width: 300px;
             display: flex;
             flex-direction: row;
             justify-content: center;
-            box-shadow: none;
-            border: none;
+            outline: none;
         }
 
             #confirmationMenu div div button {
-                width: 50%;
+                width: 150px;
                 height: 36px;
                 margin: 0;
                 padding: 0;
                 color: var(--font_title);
                 font-size: 16px;
+                border-top: 1px solid var(--font_text);
                 font-family: 'Roboto', sans-serif;
-                background: none;
-                box-shadow: none;
+                background: var(--bg);
             }
 
+                #confirmationMenu .confirmationConfirm:hover {
+                    background: #228B22;
+                }
+
+                #confirmationMenu .confirmationDismiss:hover {
+                    background: #db4437;
+                }
+
                 #confirmationMenu div div button:hover {
-                    color: var(--secColor);
-                    background: var(--mainColor);
-                    box-shadow: none;
+                    color: #fafafa
                 }
 
 #ctxMenu {
